antlr-examples/src/main/java/net/giovannibotta/antlr/example/arith2/Expressions2.g4
grammar Expressions2;

start : expr ;

expr  : left=expr op=('*'|'/') right=expr #opExpr
      | left=expr op=('+'|'-') right=expr #opExpr
      | '(' child=expr ')'                      #opExpr
      | atom=INT #atomExpr
      ;

INT   : ('0'..'9')+ ;

WS    : [ \t\r\n]+ -> skip ;
